# rgbd-slam

./: .gitignore  CMakeLists.txt  README.md
data/: params.txt  result_after.g2o  result_before.g2o
include/: slamBase.h
src/: CMakeLists.txt  detectFeatures.cpp  generatePointCloud.cpp  joinPointCloud.cpp  main.cpp  slam.cpp  slamBase.cpp  slamEnd.cpp  visualOdometry.cpp
